Trues to correct alignment.

--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -19,6 +19,9 @@ body {
   text-rendering: optimizeLegibility;
   &.farsi {
     font-family: @body_font_family_fa;
+    div {
+      text-align: right;
+    }
   }
 }
 .ie8 body {
